--- a/libreria/templates/libros/crear.html
+++ b/libreria/templates/libros/crear.html
@@ -3,5 +3,18 @@
 {% block titulo %} Agregar nuevo libro {% endblock %}
 
 {% block contenido %}
-    Formulario para agregar nuevo libro
+
+<div class="card">
+    <div class="card-header">
+        Crear un libro
+    </div>
+    <div class="card-body">
+        <h4 class="card-title">Datos del libro</h4>
+
+        {% include 'libros/form.html' %}
+    </div>
+
+</div>
+
+
 {% endblock %}
