--- a/libreria/templates/libros/editar.html
+++ b/libreria/templates/libros/editar.html
@@ -3,5 +3,18 @@
 {% block titulo %} Editar libro {% endblock %}
 
 {% block contenido %}
-    Formulario para editar libro
+
+    <div class="card">
+        <div class="card-header">
+            Editar información del libro
+        </div>
+        <div class="card-body">
+            <h4 class="card-title">Datos del libro</h4>
+    
+            {% include 'libros/form.html' %}
+        </div>
+    
+    </div>
+
+
 {% endblock %}
