--- a/libreria/templates/libros/index.html
+++ b/libreria/templates/libros/index.html
@@ -29,7 +29,10 @@
                         <td>Django con python</td>
                         <td>Imagen.jpg</td>
                         <td>Libro acerca de django</td>
-                        <td>Editar | Borrar</td>
+                        <td> 
+                            <a name="" id="" class="btn btn-info" href="{% url 'editar' %}" role="button">Editar</a> 
+                            <a name="" id="" class="btn btn-danger" href="#" role="button">Borrar</a>
+                        </td>
                     </tr>
                 </tbody>
             </table>
